--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhengfeng Lai"
-  avatar           : "profile.png"
+  avatar           : "Jeff_2019.jpeg"
   bio              : "Love this world."
   location         : "CA, USA"
   employer         :
