--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zhengfeng Lai"
   avatar           : "Jeff_2019.jpeg"
-  bio              : "Love this world."
+  bio              : "Ph.D. Candidate in Electrical and Computer Engineering, UC Davis"
   location         : "CA, USA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
