--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=rd8aA3MAAAAJ&hl=en&authuser=1&oi=ao"
-  email            :
+  email            : 
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -102,8 +102,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            :  # "http://orcid.org/yourorcidurl"
+  linkedin         : "https://www.linkedin.com/in/zhengfeng-jeff-lai-b3a214160/"
+  orcid            : # "https://orcid.org/0000-0002-2984-7913"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
