--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,11 @@
 # main links links
 main:
+  - title: "Service"
+    url: /service/
+
+  - title: "CV"
+    url: /cv/
+
   - title: "Publications"
     url: /publications/
 
@@ -15,8 +21,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
-    
+
+
+
   # - title: "Guide"
   #   url: /markdown/
