--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/zhengfeng-jeff-lai-b3a214160/"
+  linkedin         : "zhengfeng-jeff-lai-b3a214160/"
   orcid            : # "https://orcid.org/0000-0002-2984-7913"
   pinterest        :
   soundcloud       :
