--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links links
 main:
-  - title: "CV & Service"
+  - title: "CV/Bio"
     url: /cv/
     
   - title: "Publications"
     url: /publications/
 
-  # - title: "Service"
-  #   url: /service/
+  - title: "Contact"
+    url: /service/
 
   
 
