--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Zhengfeng Lai"
   avatar           : "Jeff_2019.jpeg"
-  bio              : "Ph.D. Candidate in Electrical and Computer Engineering, UC Davis"
-  location         : "Kemper 2229, UC Davis"
+  bio              : "ML Researcher at Apple AI/ML"
+  location         : "Apple Park"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=rd8aA3MAAAAJ&hl=en&authuser=1&oi=ao"
