--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Zhengfeng Lai"
-  avatar           : "Jeff_2019.jpeg"
-  bio              : "ML Researcher at Apple AI/ML"
+  avatar           : "Jeff_Lai_2.jpg"
+  bio              : "ML Researcher @ Apple AI/ML"
   location         : "Apple Park"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
