new google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ author:
   avatar           : "Jeff_Lai_2.jpg"
   bio              : "ML Researcher @ Apple AI/ML"
   location         : "Apple Park"
-  employer         :
+  employer         : " Apple"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=rd8aA3MAAAAJ&hl=en&authuser=1&oi=ao"
+  googlescholar    : "https://scholar.google.com/citations?user=s_Ws1uYAAAAJ&hl=en&oi=ao"
   email            : 
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
