--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhengfeng Lai"
-  avatar           : "jeff_2.jpg"
+  avatar           : "jeff_3.jpeg"
   bio              : "ML Researcher @ Apple AI/ML"
   location         : "Apple Park"
   employer         : "Apple"
