--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Zhengfeng Lai"
   avatar           : "jeff_3.jpeg"
   bio              : "ML Researcher @ Apple AI/ML"
-  location         : "Apple Park"
+  location         : "Cupertino, CA"
   employer         : "Apple"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=s_Ws1uYAAAAJ&hl=en&oi=ao"
